--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "~0.13.12",
-    "expo-sqlite": "~9.2.1"
+    "expo-sqlite": "~9.2.1",
+    "expo-file-system": "~11.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
