--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "~0.13.12",
-    "expo-camera": "~11.2.2"
+    "expo-camera": "~11.2.2",
+    "expo-image-picker": "~10.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
