--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.1",
+    "expo-calendar": "~9.2.2",
+    "expo-camera": "~11.2.2",
     "expo-file-system": "~11.1.3",
+    "expo-image-picker": "~10.2.2",
     "expo-sqlite": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
+    "react-datepicker": "^4.3.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-camera": "^4.2.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-web": "~0.13.12",
-    "expo-camera": "~11.2.2",
-    "expo-image-picker": "~10.2.2"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
